tests/macros/plugin/transform_async.stderr
error: option `transform_async` does not exist for kind `plugin`
 --> $DIR/transform_async.rs:2:52
  |
2 |     let q = inquisition::questions![plugin { async transform: todo!() }];
  |                                                    ^^^^^^^^^
