tests/macros/plugin/transform_async.rs
fn main() {
    let q = inquisition::questions![plugin { async transform: todo!() }];
}
